Only showing panels on galaxy page; showing the manual panel link to admins; realigning panel close links to prevent conflict with slidedeck badge.

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -2788,3 +2788,7 @@ td.machine-generated-column {
     margin-right: 33px;
     text-decoration: underline;   
 }
+
+.tag_base #welcome-link {
+   display: none;
+}
